# korali

./: ._.  meson.build  meson_options.txt
examples/: meson.build
examples/bayesian.inference/reference/_model/: model.py
examples/benchmarks/: meson.build
examples/inter_and_extrapolation/: README.rst  resampling.py
examples/learning/supervised/: meson.build
examples/learning/supervised/Cylinder/: run-reconstruction.py  utilities.py
examples/learning/supervised/classification/: meson.build
examples/learning/supervised/learning_rate/: run-ffn.py
examples/learning/supervised/mnist/: main.py  meson.build  run-ffn-automatic.py  run-ffn.py  run-mnist-autoencoder-automatic.py  run-mnist-autoencoder.py  run-mnist-classifier.py  run-mnist-refined-autoencdoer.py  utilities.py
examples/learning/supervised/regression/: meson.build
examples/learning/supervised/regression/sineWave/: README.rst  meson.build
examples/learning/supervised/time-series/sineWave/: README.rst  meson.build  run-rnn.py
examples/reinforcement.learning/cartpole/: run-vracer.py
examples/sampling/: meson.build
examples/study.cases/diffPhysics/: README.rst  check_phiflow_version.py  install_deps.sh  install_deps_oldPhiFlow.sh  neural-network-baseline.py  run-burger-diffphysics.py  run-burger-dl.py  run-burger-forward.py  run-burger-nn.py  run-burger-training.py  run-burger-training_test.py  run-vracer-burger-jax.py  test-neural-network.py
examples/study.cases/openAIGym/: run-b-vracer.py  run-vracer.py
examples/study.cases/pettingZoo/: submit_greasy.sh
examples/supervised.learning/mnist/: run-mnist-autoencoder.py  run-mnist-classifier.py
examples/supervised.learning/sineWave/: run-rnn.py
python/korali/: meson.build
python/korali/auxiliar/: meson.build  printing.py
python/korali/plot/: HMC.py  MCMC.py  __main__.py  deepSupervisor.py  meson.build
python/korali/profiler/: __main__.py  helpers.py  meson.build
python/korali/rlview/: __main__.py
source/: engine.cpp  engine.hpp  meson.build
source/auxiliar/: cbuffer.hpp  cudaUtils.hpp  jsonInterface.cpp  logger.cpp  math.hpp
source/modules/: module.cpp
source/modules/conduit/: conduit.cpp  conduit.cpp.base
source/modules/distribution/: distribution.cpp  distribution.cpp.base
source/modules/experiment/: .gitignore  experiment.config  experiment.cpp  experiment.cpp.base  experiment.hpp  experiment.hpp.base
source/modules/neuralNetwork/: .gitignore  neuralNetwork.config  neuralNetwork.cpp  neuralNetwork.cpp.base  neuralNetwork.hpp  neuralNetwork.hpp.base
source/modules/problem/: problem.config  problem.cpp  problem.hpp
source/modules/solver/: .gitignore  solver.cpp  solver.cpp.base  solver.hpp  solver.hpp.base
source/modules/solver/learner/deepSupervisor/learning_rate/: README.rst  decay.cpp  decay.hpp  learning_rate.cpp  learning_rate.hpp  meson.build  step_based_decay.cpp  step_based_decay.hpp  time_based_decay.cpp  time_based_decay.hpp
source/modules/solver/learner/deepSupervisor/loss_functions/: cross_entropy.cpp  cross_entropy.hpp  loss.cpp  loss.hpp  meson.build  mse.cpp  mse.hpp  myloss.hpp  negative_log_likelihood.cpp  negative_log_likelihood.hpp
source/modules/solver/learner/deepSupervisor/metrics/: README.md  accuracy.cpp  accuracy.hpp  meson.build  metrics.cpp  metrics.hpp  tp.cpp  tp.hpp
source/modules/solver/learner/deepSupervisor/regularizers/: l1.cpp  l1.hpp  l2.cpp  l2.hpp  meson.build  regularizer.hpp
source/modules/solver/learner/deepSupervisor/reward_functions/: cross_entropy.cpp  cross_entropy.hpp  meson.build  mse.cpp  mse.hpp  negative_log_likelihood.cpp  negative_log_likelihood.hpp  reward.cpp  reward.hpp
study.cases/CUP/: install_cup.sh
study.cases/CUP/2D-swimmers/: sbatch-compare-vracer-swimmer.lumi.sh
study.cases/CUP/3D-swimmers/: Makefile
study.cases/CUP/swimmers-2D/: eval-vracer-swimmer.sh
study.cases/CUP/swimmers-3D/: Makefile  eval-vracer-swimmer.cpp  run-vracer-swimmer.cpp  sbatch-eval-vracer-swimmer.lumi.sh  sbatch-run-vracer-swimmer.lumi.sh  sbatch-transfer-vracer-swimmer.lumi.sh  transfer-vracer-swimmer.cpp
study.cases/CUP2D/: .gitignore  install_cup.sh  install_cup3d.sh
study.cases/CUP2D/cylinder-drag-reduction/: Makefile  eval-vracer-cylinder.cpp  run-cmaes-cylinder.cpp  run-vracer-cylinder.cpp  sbatch-3Deval-vracer-cylinder.daint.sh  sbatch-3Deval-vracer-cylinder.lumi.sh  sbatch-eval-vracer-cylinder.daint.sh  sbatch-eval-vracer-cylinder.lumi.sh  sbatch-eval-vracer-cylinder.sh  sbatch-run-cmaes-cylinder.daint.sh  sbatch-run-vracer-cylinder.daint.sh  sbatch-run-vracer-cylinder.lumi.sh
study.cases/CUP2D/naca-drag-reduction/: Makefile  eval-vracer-naca.cpp  run-vracer-naca.cpp  sbatch-eval-vracer-naca.daint.sh  sbatch-eval-vracer-naca.lumi.sh  sbatch-run-vracer-naca.daint.sh  sbatch-run-vracer-naca.lumi.sh
study.cases/CUP2D/swimmers/: sbatch-compare-vracer-swimmer.lumi.sh  sbatch-eval-vracer-swimmer.sh.lumi  sbatch-run-vracer-swimmer.lumi.sh
study.cases/MAgent/: README.rst  install_deps.sh  run-dvracer.py
study.cases/MAgent/_model/: agent.py
study.cases/linearODEs/: .gitignore  1_makeSyntheticData.py  2_CMAES.py  3_MCMC.py  4_TMCMC.py  5_Nested.py  6_BayesPrediciton.py  README.rst  makeSyntheticData.py
study.cases/linearODEs/_model/: model.py
study.cases/openAIGym/: .run_test.sh  run-b-vracer.py  run-vracer-irl.py  run-vracer.py  settings_irl.sh
study.cases/openAIGym/_jobs/: benchmark-local.sh  bsub-vracer-irl.lsf  submit-greasy-benchmark.sh  submit_batch_irl.sh
study.cases/openAIGym/_jobs-bayesian/: sbatch-b-vracer.sh  submit-greasy-SWAG.sh  submit-greasy-baseline.sh  submit-greasy-ensemble.sh  submit-greasy-langevin.sh  submitt_all.sh
study.cases/openAIGym/_model/: AntWrapper.py  agent.py  environment.py
study.cases/pettingZoo/: README.rst  run-vracer.py
study.cases/pettingZoo/_model/: agent.py
subprojects/: .gitignore  range-v3.wrap  tbb.wrap
tests/python/cxx/: test-run.py
tests/statistical/integrator/: run-integrator-4.py
tests/statistical/optimizers/: meson.build
tests/unit/modules/: neuralnetwork.cpp  problems.cpp
(+132333 files in other folders)
